[project]
name = "btcal"
version = "0.1.0"
description = ""
authors = [
    {name = "kesaralive",email = "hello@kesaralive.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "numpy (>=2.0,<2.3.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "torchaudio (>=2.8.0,<3.0.0)",
    "segmentation-models-pytorch (>=0.5.0,<0.6.0)",
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry]
packages = [{include = "btcal", from = "src"}]

[tool.poetry.scripts]
start = "src.main:main"
predict = "src.predict:start"
server = "src.server:start"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
